--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "framer-motion": "4",
     "install": "^0.13.0",
     "js-cookie": "^3.0.0",
-    "next": "10.0.9",
+    "next": "12.0.10",
     "next-redux-wrapper": "^7.0.4",
     "primeflex": "^3.1.3",
     "primeicons": "^5.0.0",
     "primereact": "^7.2.0",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-bootstrap": "^1.6.3",
-    "react-dom": "17.0.1",
+    "react-dom": "17.0.2",
     "react-hook-form": "^7.27.0",
     "react-redux": "^7.2.4",
     "react-select": "^5.2.2",
@@ -39,6 +39,8 @@
     "react-transition-group": "^4.4.2",
     "reactstrap": "^9.0.1",
     "redux-devtools-extension": "^2.13.9",
-    "rsuite": "^4.10.2"
+    "rsuite": "^4.10.2",
+    "leaflet": "^1.7.1",
+    "react-leaflet": "^3.2.5"
   }
 }
