--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "4",
     "install": "^0.13.0",
     "js-cookie": "^3.0.0",
+    "leaflet": "^1.7.1",
     "next": "12.0.10",
     "next-redux-wrapper": "^7.0.4",
     "primeflex": "^3.1.3",
@@ -33,14 +34,13 @@
     "react-bootstrap": "^1.6.3",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.0",
+    "react-leaflet": "^3.2.5",
     "react-redux": "^7.2.4",
     "react-select": "^5.2.2",
     "react-spring": "^9.2.4",
     "react-transition-group": "^4.4.2",
     "reactstrap": "^9.0.1",
     "redux-devtools-extension": "^2.13.9",
-    "rsuite": "^4.10.2",
-    "leaflet": "^1.7.1",
-    "react-leaflet": "^3.2.5"
+    "rsuite": "^4.10.2"
   }
 }
